<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_default"
        app:layoutDescription="@xml/fragment_representative_scene">


        <TextView
            android:id="@+id/search_title"
            style="@style/appHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/representative_address_line_1"
            android:inputType="textPostalAddress"
            android:text="@{viewModel.address.line1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@{viewModel.address.line2}"
            android:autofillHints=""
            android:hint="@string/representative_address_line_2"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/representative_city"
            android:text="@{viewModel.address.city}"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <!-- TODO: Add default values from provided resources  -->
        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <Spinner
            android:id="@+id/state"
            stateValue="@{viewModel.address.state}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:entries="@array/states"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/representative_zip"
            android:text="@{viewModel.address.zip}"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <!-- TODO: Add visual styling and label -->
        <Button
            android:id="@+id/button_search"
            style="@style/appButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/representative_find_my_representatives"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <!-- TODO: Add visual styling and content -->
        <Button
            android:id="@+id/button_use_my_location"
            style="@style/appButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/representative_use_my_location"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/representative_title"
            style="@style/appHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/representative_my_representatives_title"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_use_my_location" />

        <!-- TODO: Add Representatives RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/representative_title" />


        <!-- TODO: Add visual styling and content -->
        <ProgressBar
            android:id="@+id/representative_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_use_my_location" />


        <!-- TODO: Add visual styling and content -->

        <!--        <TextView-->
        <!--            android:id="@+id/list_placeholder"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:gravity="center"-->
        <!--            android:textAlignment="center"-->
        <!--            android:visibility="gone"-->
        <!--            motion:visibilityMode="ignore"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/textview_representative_title"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent" />-->

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>