<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <import type="com.example.android.politicalpreparedness.data.Result" />

        <import type="com.example.android.politicalpreparedness.network.models.VoterInfoResponse" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

        <variable
            name="resultVoterInfoResponse"
            type="Result&lt;VoterInfoResponse>" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/voter_info_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="
            election_date,
            state_ballot,
            state_header,
            state_correspondence_header,
            state_locations"
            tools:visibility="visible" />


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/padding_default"
            android:singleLine="true"
            app:electionName="@{resultVoterInfoResponse}"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white"
            tools:title="Oklahoma Election" />


        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_default"
            app:electionDate="@{resultVoterInfoResponse}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="Tue Oct 12 00:00:00 CEST 2022" />


        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/voter_election_information"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:stateHeader="@{resultVoterInfoResponse}" />

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.openVotingLocationFinderUrl()}"
            android:text="@string/voter_voting_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:stateVotingLocation="@{resultVoterInfoResponse}" />


        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> viewModel.openBallotUrl()}"
            android:text="@string/voter_ballot_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:stateBallotInfo="@{resultVoterInfoResponse}" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/voter_address"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:stateCorrespondenceHeader="@{resultVoterInfoResponse}" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:address="@{resultVoterInfoResponse}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="Example 14D" />


        <Button
            android:id="@+id/button_voter"
            style="@style/appButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:onClick="@{()->viewModel.onButtonClick()}"
            app:buttonVoter="@{resultVoterInfoResponse}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/voter_follow_election" />


        <ProgressBar
            app:progressIndicator="@{resultVoterInfoResponse}"
            android:id="@+id/progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/election_name" />


        <ImageView
            android:id="@+id/image_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_connection_error"
            android:visibility="gone"
            app:imageNoData="@{resultVoterInfoResponse}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_no_data" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>